# dyndynser

./: Cargo.toml  PACKAGING.md  README.md  justfile  mise.toml  private.pem  public.pem
packaging/debian/: build.sh  changelog  control  copyright  dyndynser.1  postinst  postrm  prerm
src/: client.rs  config.rs  ddns.rs  ip.rs  keys.rs  logging.rs  main.rs  server.rs  signatures.rs  unix.rs
src/cli/: mod.rs
src/dns/: mod.rs
src/dns/route53/: aws_route53.rs  aws_signature.rs  mod.rs  route53.rs
test/certs/: augs.sarif.example.crt  augs.sarif.example.priv  gr_e03_xca_ed25.priv  gr_e03_xca_ed25.pub
