[package]
name = "dyndynser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["blocking"] }
rust-s3 = { version = "0.37.1", default-features = false, features = [
    "sync",
    "fail-on-err",
    "minidom",
    "reqwest",
    "tags",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
