[package]
name = "dyndynser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive", "env"] }
const-oid = { version = "0.10.2", features = ["db"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["blocking"] }
rust-s3 = { version = "0.37.1", default-features = false, features = [
    "sync",
    "fail-on-err",
    "minidom",
    "reqwest",
    "tags",
    "http-credentials",
    "sync-rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
syslog = "7.0.0"
x509-cert = { version = "0.2.5", features = ["pem"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
