[package]
name = "dyndynser"
version = "1.0.1"
edition = "2024"
rust-version = "1.90.0"

description = "Distributed cryptographic DDNS over AWS' S3 and Route53"
authors = ["Nick <0xnf@winetech.com>"]
homepage = "https://github.com/0xNF/dyndynser"
repository = "https://github.com/0xNF/dyndynser"
documentation = "https://github.com/0xNF/dyndynser"
readme = "README.md"
license = "Apache-2.0"
keywords = ["s3", "route53", "ddns", "signed", "x509"]
categories = ["command-line-utilities", "network-programming"]

publish = false

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["now"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
const-oid = { version = "0.10.2", features = ["db"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pkcs8", "pem"] }
env_logger = "0.11.10"
hex = "0.4.3"
hmac = "0.13.0"
log = "0.4.29"
reqwest = { version = "0.13.3", features = ["blocking"] }
rust-s3 = { version = "0.37.1", default-features = false, features = [
    "sync",
    "fail-on-err",
    "minidom",
    "reqwest",
    "tags",
    "http-credentials",
    "sync-rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_json_canonicalizer = "0.3.2"
sha2 = "0.11.0"
ssh-key = { version = "0.6.7", features = ["ed25519", "encryption"] }
syslog = "7.0.0"
x509-cert = { version = "0.2.5", features = ["pem"] }


[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
